k8s/ld-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ld-rr
  annotations:
    imageRegistry: "https://hub.docker.com/"
