k8s/habits-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: habits-deployment
  namespace: ld-rr
spec:
  selector:
    matchLabels:
      app: habits
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: habits
    spec:
      containers:
      - image: ahmadsaeedgoda/ld_rr:habit-service
        imagePullPolicy: Always
        name: habits-pod
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.5"
          limits:
            memory: "512Mi"
            cpu: "1"

---

apiVersion: v1
kind: Service
metadata:
  name: habits-service
  namespace: ld-rr
spec:
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: habits
