k8s/habits-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: habits-postgres-deployment
  namespace: ld-rr
spec:
  selector:
    matchLabels:
      app: habits-postgres-app
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: habits-postgres-app
    spec:
      containers:
      - image: ahmadsaeedgoda/ld_rr:habits-postgres
        imagePullPolicy: Always
        name: habits-postgres-pod
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: habits-postgres-data
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.5"
          limits:
            memory: "512Mi"
            cpu: "1"
      volumes:
      - name: habits-postgres-data
        persistentVolumeClaim:
          claimName: habits-postgres-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: habits-postgres-service
  namespace: ld-rr
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: habits-postgres-app
