k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: habit-tracker-ingress
  namespace: ld-rr
  labels:
    app: habit-tracker-ingress
    tier: backend
    environment: development
spec:
  rules:
  - host: habit-tracker.local
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3000
      - path: /habits
        pathType: Prefix
        backend:
          service:
            name: habits-service
            port:
              number: 3001
